--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
-# Blocklist all files and folders
+# Blocklist files/folders in same directory as the .gitignore file
 /*
 
-# Includelist .gitignore and specific .obsidian folder
+# Includelist some files
 !.gitignore
+
+# Unignore the directory tree leading to .obsidian
+!Il mio Drive/
+Il mio Drive/*
+!Il mio Drive/UNIVERSITA/
+Il mio Drive/UNIVERSITA/*
+Il mio Drive/UNIVERSITA/3. Magistrale/*
+!Il mio Drive/UNIVERSITA/3. Magistrale/
+Il mio Drive/UNIVERSITA/3. Magistrale/2.2 Autonomous and Adaptive Systems/*
+!Il mio Drive/UNIVERSITA/3. Magistrale/2.2 Autonomous and Adaptive Systems/
+Il mio Drive/UNIVERSITA/3. Magistrale/2.2 Autonomous and Adaptive Systems/AAS/*
+!Il mio Drive/UNIVERSITA/3. Magistrale/2.2 Autonomous and Adaptive Systems/AAS/
+Il mio Drive/UNIVERSITA/3. Magistrale/2.2 Autonomous and Adaptive Systems/AAS/.obsidian/*
 !Il mio Drive/UNIVERSITA/3. Magistrale/2.2 Autonomous and Adaptive Systems/AAS/.obsidian/
